[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-actions-tool-kit"
version = "0.1.1"
description = "Tiny @actions/core-style helpers for Python GitHub Actions"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name="Your Name"}]
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.10", "types-setuptools"]

[tool.pytest.ini_options]
addopts = "-q"
